--- a/styles/style.css
+++ b/styles/style.css
@@ -9,22 +9,49 @@
 
 
 
-
-/*********************/
-/* CUSTOM PROPERTIES */
-/*********************/
-:root {
-	/* startje */
-		--color-main:black;
-	  }
+:root{
+	--zwart:black;
+	--wit: white;
+	color-scheme: light dark;
+	overflow-x: hidden;
+}
 
 
 
 
 
-/****************/
-/* JOUW STYLING */
-/****************/
 
-/* jouw code */
+ul{
+	list-style: none;
+	width: 100%;
+}
+header{
+	width: 100%;
+}
+h1{
+	visibility: hidden;
+}
 
+nav li a{
+	/*color: var(--wit);*/
+	color: var(--zwart);
+}
+
+nav ul:nth-of-type(1){
+	/*background-color: var(--zwart);*/
+	display: flex;
+
+}
+
+nav ul:nth-of-type(1) li a{
+	margin: 1em;
+}
+
+nav ul:nth-of-type(2){
+	/*background-color: var(--zwart);*/
+	display: flex;
+
+}
+nav ul:nth-of-type(2) li a 	img{
+	scale: 0.3;
+}
