--- a/styles/style.css
+++ b/styles/style.css
@@ -66,7 +66,7 @@ nav section{
 	align-items: center;
 	gap: 2em;
 	width: 100%;
-	background-color: aquamarine;
+	background-color: var(--zwart);
 	position: sticky;
   	left: 0;
   	right: 0;
@@ -77,6 +77,9 @@ nav section{
 }
 nav ul li a{	
 	color: var(--zwart);
+}
+nav section ul li a{	
+	color: var(--wit);
 }
 nav section img{
 	width: 2em;
