--- a/styles/style.css
+++ b/styles/style.css
@@ -6,19 +6,33 @@
 }
 
 @font-face {
-    font-family: 'helvetica';
-    src: url('./fonts/HelveticaNeue-Regular.1.woff2') format('woff2');
+    font-family: 'helvetitom';
+    src: url('../fonts/HelveticaNeue-Regular.woff2') format('woff2');
+	font-weight: 400;
 }
-
+@font-face {
+    font-family: 'helvetitom';
+    src: url('../fonts/HelveticaNeue-Medium.woff2') format('woff2');
+	font-weight: 600;
+}
+@font-face {
+    font-family: 'helvetitom';
+    src: url('../fonts/HelveticaNeue-Light.woff2') format('woff2');
+	font-weight: 300;
+}
 body{
 	width: 100%;
-    font-family: 'helvetica';
+    font-family: 'helvetitom';
 }
 
 :root{
 	--zwart:black;
 	--wit: white;
+	--grijs: rgb(184 184 184);
+	--donkergrijs: #757575;
 	color-scheme: light dark;
+
+	--svg-fill:light-dark(red, green);
 	overflow-x: hidden;
 	/*background-color: blanchedalmond;*/
 	margin: 0em;
@@ -46,6 +60,17 @@ ul{
 	list-style: none;
 }
 
+svg{
+	width: 2em;
+	height: 2em;
+	fill: var(--svg-fill);
+}
+nav a{
+	color: white;
+    text-decoration: none;
+	display: block;
+    padding: 10px;
+}
 nav ul:nth-of-type(1){
 	display: flex;
 	justify-content: end;
@@ -57,24 +82,38 @@ nav ul:nth-of-type(1){
   	top: 0;
   	bottom: 0;
 	margin-right: 1em;
-	visibility: hidden;
-
+	display: none;
 }
-nav section{
+nav section:first-of-type{
 	display: flex;
 	justify-content: space-evenly;
 	align-items: center;
 	gap: 2em;
 	width: 100%;
-	background-color: var(--zwart);
+	/* background-color: var(--zwart); */
+	background-color: aqua;
 	position: sticky;
   	left: 0;
   	right: 0;
   	top: 0;
   	bottom: 0;
 	margin-left: -8px;
-	visibility: hidden;
+	display: none;
 }
+nav section:nth-of-type(1){
+	display: flex;
+	justify-content: space-evenly;
+	align-items: center;
+	gap: 2em;
+	width: 100%;
+	background-color: aqua;
+	position: sticky;
+  	left: 0;
+  	right: 0;
+  	top: 0;
+  	bottom: 0;
+	margin-left: -8px;
+} 
 nav ul li a{	
 	color: var(--zwart);
 }
@@ -91,122 +130,123 @@ nav section ul{
 	display: flex;
 	gap: 1em;
 }
-
+nav ul li:nth-child(1){
+	display: flex;
+	background-color: red;
+	flex-direction: row;
+}
+button {
+    background: none;
+    border: none;
+    color: white;
+    font-size: 24px;
+    cursor: pointer;
+    display: none;
+    /* Hide button by default */
+}
 /*-------------------------------------------^^ navigatie ^^--------------------------------------------------*/
 /*-------------------------------------------vv main vv--------------------------------------------------*/
 
-a img{
-	width:100%;
-}
-
-img{
-	margin-left: 0;
-}
-
-video{
-	width: 100%;
-}
 a {
 	text-decoration: none;
-	color: var(--zwart)
+	color: var(--zwart);
 }
 
-main section:nth-of-type(1){
-	display: flex;
-	flex-direction: column;
-	order: -1;
+ main section a{
+	order: 3;
+	justify-content: center;
+    color: var(--wit);
+    background-color: var(--zwart);
+    padding: 1em;
+    /* /* padding-left: 2em; / */
+    /* / padding-right: 2em; / */
+    border-radius: 3em;
+    transition: 0.3s;
+    /* / width: 550px; */ 
+    /* margin-top: 10px; */
+    text-align: center;
 }
- main section div a{
-	color: var(--zwart);
-	background-color: var(--wit);
-	padding: 1em;
-	padding-left: 2em;
-	padding-right: 2em;
-	border-radius: 1.5em;
-	transition: 0.3s;
-}
-main section div a:hover{
+main section a:hover{
 	color: var(--wit);
-	background-color: var(--zwart);
+	background-color: var(--donkergrijs);
+}
+main section{
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+}
+main section img {
+    width: auto;
+    height: auto;
+}
+main section {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+main section h2 {
+    order: 2;
+    text-align: center;
 }
 
-main section a:nth-of-type(2){
-	color: var(--zwart);
-	background-color: var(--wit);
-	padding: 1em;
-	padding-left: 2em;
-	padding-right: 2em;
-	border-radius: 1.5em;
-	transition: 0.3s;
-}
-main section a:nth-of-type(2):hover{
-	color: var(--wit);
-	background-color: var(--zwart);
-}
-
-main ul{
-	display: flex;
-	gap: 2em;
-}
-main section h2{
-	position: absolute;
-	color: var(--wit);
-	font-size: 3.5em;
-}
-main section div{
-	display: flex;
-	flex-wrap: wrap;
-	gap: 1em;
-}
-main ul li a p{
-	color: var(--zwart);
-	background-color: var(--wit);
-	padding: 1em;
-	padding-left: 2em;
-	padding-right: 2em;
-	border-radius: 1.5em;
-	transition: 0.3s;
-}
-video:nth-child(2){
-	display: block;
-}
-video:nth-child(2){
-	display: none;
-}
 /*-------------------------------------------^^ main ^^--------------------------------------------------*/
 /*-------------------------------------------vv responsive vv--------------------------------------------------*/
-
+/* 
 @media (width > 48em){
-	main section a img{
-		content: url('../images/skier.png');
+	main section img:first-child{
+		content: url('../images/roze_jas_main_big.png');
 	}
-	main section a video source:nth-child(1){
-		display: block;
-	}
-	main section a video source:nth-child(2){
-		display: ;
-	}
-	main section div{
-		display: flex;
-		gap: 2em;
-	}
-	main section div a{
-		position: absolute;
 
-	}
+
 }
 
 @media (width > 64em){
-	nav ul:nth-of-type(1){
-		position:static;
-		visibility: visible;
+	nav ul:nth-of-type(0){
+
+		display: flex;
 	}
-	nav section{
-		visibility: visible;
-		position:static;
+	nav section:first-of-type{
+
+		display: flex;
 	}
+	nav section:nth-of-type(1){
+		display: none;
+	}
+} */
+
+/* Media query for mobile devices */
+@media (max-width: 64em) {
+    button {
+        display: block;
+        /* Show button on mobile */
+    }
+
+    nav {
+        display: none;
+        /* Hide nav by default on mobile */
+        flex-direction: column;
+        /* Vertical layout for mobile */
+        position: absolute;
+        top: 50px;
+        left: 0;
+        width: 100%;
+    }
 }
 
+/* Media query for larger screens */
+@media (min-width: 48em) {
+    button {
+        display: none;
+        /* Hide button on larger screens */
+    }
+
+    nav {
+        display: flex;
+        /* Show nav on larger screens */
+        position: static;
+        /* Reset position */
+    }
+}
 /*-------------------------------------------^^ responsive ^^--------------------------------------------------*/
 /*-------------------------------------------vv footer vv--------------------------------------------------*/
 
@@ -214,4 +254,82 @@ footer img{
 	width: 1em;
 	height: 1em;
 	top: 0em;
+}
+footer{
+	width: 100%;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+
+	border-top: 1px solid var(--grijs); 
+	padding-top: 10px; 
+	margin-top: 20px; 
+	border-width: 100%;
+}
+footer ul{
+	width: 100%;
+}
+footer section{
+	display: flex;
+	border-top: 1px solid var(--grijs); 
+	padding-top: 10px; 
+	margin-top: 20px; 
+	border-width: 100%;
+	width: 100%;
+
+}
+footer ul li section{
+	display: flex;
+	flex-direction: column;
+	width: 30em;
+	align-items: center;
+}
+footer>ul:nth-child(1){
+	text-align: center;
+
+}
+footer>ul:nth-child(3){
+	display: flex;
+	flex-direction: row;
+}
+footer>ul:nth-child(3) li{
+	border-left: 1px solid var(--grijs); 
+	padding-top: 10px; 
+	margin-top: 20px; 
+	border-width: 100%;
+}
+
+footer ul li:first-of-type a{ /*-----------------*/
+	color: var(--wit);
+	background-color: var(--zwart);
+
+	padding: 0.8em;
+	padding-left: 1.2em;
+	padding-right: 1.2em;
+	border-radius: 1.5em;
+	transition: 0.3s;
+}
+
+footer ul li:first-of-type a:hover{
+	background-color: var(--donkergrijs);
+
+	padding: 0.8em;
+	padding-left: 1.2em;
+	padding-right: 1.2em;
+	border-radius: 1.5em;
+}
+
+footer:nth-last-child(1) ul{
+	display: flex;
+	align-items: center;
+}
+footer ul li:nth-child(2) a{ 
+	color: var(--wit);
+	background-color: var(--zwart);
+
+	padding: 0.8em;
+	padding-left: 1.2em;
+	padding-right: 1.2em;
+	border-radius: 1.5em;
+	transition: 0.3s;
 }
